Changelog of Jail

Alpha0.3.0
- Fixed newly joined players all being jailed bug #10
- Fixed console popping errors of isJailed()-error bug #10
- Added support for EconomyPlus (Prisoner bail function)
- Added support for individual jail's bail status(Allow bailing or not)
- Default time unit is now customizable in configuration file
- Added bail sign. 1st line: [Bail]
- Fixed some messages not converted from their keys
- Prisoners' gamemode will be set to 0 instead of 2
- Added 'jail.modify.bypass' perm-node (detail in plugin.yml)
- Fixed block-break detection (warning broadcasting issue)
- Fixed player-escape-warning overlapping the timer GUI
- Implemented prisoner inventory saver
- Fixed a word misspell in lang_zh.json
Technical updates:
- Code cleanup - Removed unused code
- Added an interface class for Jail's API
- Bumped to PocketMine API 3.0.0-ALPHA1 (Older APIs compatible)
- Different sign types are checked with individual listeners
- Signs positioning technology enhancement

Alpha0.2.3
- Fixed '/votejail' command not working for normal players
- Added 'jail.uuidcheck.bypass' permission

Alpha0.2.2
- Added an option to disable timer GUI on prisoners in config
- Updated README.md for Github
- Added '/votejail' cmd, allowing players to vote someone who behaves badly
- Fixed loading message of compatible economy plugin
- Fixed /tpjail command and tpJail() not working
- Code cleanup
- Added UUID Checker

Alpha0.2.1
- Added Russian #5
- Redefined language keys
- Added more translatable messages

Alpha0.2
- Added more languages #2
- Various bug fixes

Alpha0.1.1
- Added some missing PHPDoc
- Removed unused code
- Resolved mobile incompatibility to update checker
- Resolved internet connectivity issue to update checker

Alpha0.1
- Hugely improved and enhanced auto update checker/installer (config)
- Implemented bail support for PocketMoney
- Added an option to disable bail
- Fixed some typos
- Implemented bail money requirement on prisoner's GUI