@@ -24,7 +24,9 @@ use hoyinm14mc\jail\commands\DeljailCommand;
 use hoyinm14mc\jail\commands\JailCommand;
 use hoyinm14mc\jail\commands\JailedCommand;
 use hoyinm14mc\jail\commands\JailmineCommand;
+use hoyinm14mc\jail\commands\JailresetmineCommand;
 use hoyinm14mc\jail\commands\JailsCommand;
+use hoyinm14mc\jail\commands\JailsellhandCommand;
 use hoyinm14mc\jail\commands\SetjailCommand;
 use hoyinm14mc\jail\commands\SwitchjailCommand;
 use hoyinm14mc\jail\commands\TpjailCommand;
@@ -168,6 +170,8 @@ class Jail extends PluginBase implements JailAPI
         $this->getCommand("bail")->setExecutor(new BailCommand($this));
         $this->getCommand("votejail")->setExecutor(new VotejailCommand($this));
         $this->getCommand("jailmine")->setExecutor(new JailmineCommand($this));
+        $this->getCommand("jailsellhand")->setExecutor(new JailsellhandCommand($this));
+        $this->getCommand("jailresetmine")->setExecutor(new JailresetmineCommand($this));
         $this->getServer()->getScheduler()->scheduleRepeatingTask(new JailTimingTask($this), 20);
         $this->getServer()->getScheduler()->scheduleRepeatingTask(new TimeBroadcastTask($this), 3);
         $this->getServer()->getPluginManager()->registerEvents(new PlayerListener($this), $this);
